force-app/main/default/objects/Term__c/fields/One_Time_Amount__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Amount__c</fullName>
    <label>One Time Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>