force-app/main/default/objects/Term__c/fields/Product_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Customer_Number__c</fullName>
    <label>Product Customer Number</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipName>Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>