force-app/main/default/objects/Term__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>